--- a/index.html
+++ b/index.html
@@ -27,19 +27,17 @@
           </a>
           <ul class="header-nav-list list">
             <li class="header-nav-item">
-              <a href="./index.html" class="header-link-after header-link link"
+              <a href="./index.html" class="header-nav-link current link"
                 >Studio</a
               >
             </li>
             <li class="header-nav-item">
-              <a
-                href="./portfolio.html"
-                class="header-link-after header-link link"
+              <a href="./portfolio.html" class="header-nav-link link"
                 >Portfolio</a
               >
             </li>
             <li class="header-nav-item">
-              <a href="" class="header-link-after header-link link">Contacts</a>
+              <a href="" class="header-nav-link link">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -71,7 +69,9 @@
             Effective Solutions <br />
             for Your Business
           </h1>
-          <button type="button" class="hero-button btn">Order Service</button>
+          <button class="hero-button btn" type="button" data-modal-open>
+            Order Service
+          </button>
         </div>
       </section>
 
@@ -599,5 +599,18 @@
         </div>
       </div>
     </footer>
+
+    <!-- Modal window -->
+    <div class="backdrop" data-modal>
+      <div class="modal">
+        <button class="madal-btn-exit" type="button" data-modal-close>
+          <svg class="modal-icon-exit" width="8" height="8">
+            <use href="./images/icon.svg#icon-closed-modal"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+
+    <script src="./js/modal.js"></script>
   </body>
 </html>
