--- a/portfolio.html
+++ b/portfolio.html
@@ -27,19 +27,17 @@
           </a>
           <ul class="header-nav-list list">
             <li class="header-nav-item">
-              <a href="./index.html" class="header-link-after header-link link"
-                >Studio</a
-              >
+              <a href="./index.html" class="header-nav-link link">Studio</a>
             </li>
             <li class="header-nav-item">
               <a
                 href="./portfolio.html"
-                class="header-link-after header-link link"
+                class="header-link-after header-nav-link current link"
                 >Portfolio</a
               >
             </li>
             <li class="header-nav-item">
-              <a href="" class="header-link-after header-link link">Contacts</a>
+              <a href="" class="header-nav-link link">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -95,13 +93,22 @@
           <ul class="portfolio-list list">
             <li class="portfolio-item link">
               <a class="link-picture link" href=""
-                ><img
-                  class="portfolio-picture"
-                  src="./images/portfolio/photo-bank-app.jpg"
-                  alt="bank-app"
-                  width="360"
-                  height="300"
-                />
+                ><div class="portfolio-box-label">
+                  <img
+                    class="portfolio-picture"
+                    src="./images/portfolio/photo-bank-app.jpg"
+                    alt="bank-app"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-label">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-wraper">
                   <h2 class="portfolio-name-title">
                     Banking App Interface Concept
@@ -112,13 +119,22 @@
             </li>
             <li class="portfolio-item link">
               <a class="link-picture link" href=""
-                ><img
-                  class="portfolio-picture"
-                  src="./images/portfolio/photo-payment.jpg"
-                  alt="payment"
-                  width="360"
-                  height="300"
-                />
+                ><div class="portfolio-box-label">
+                  <img
+                    class="portfolio-picture"
+                    src="./images/portfolio/photo-payment.jpg"
+                    alt="payment"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-label">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-wraper">
                   <h2 class="portfolio-name-title">Cashless Payment</h2>
                   <p class="portfolio-desc">Marketing</p>
@@ -127,13 +143,22 @@
             </li>
             <li class="portfolio-item link">
               <a class="link-picture link" href=""
-                ><img
-                  class="portfolio-picture"
-                  src="./images/portfolio/photo-meditacion-app.jpg"
-                  alt="meditacion-app"
-                  width="360"
-                  height="300"
-                />
+                ><div class="portfolio-box-label">
+                  <img
+                    class="portfolio-picture"
+                    src="./images/portfolio/photo-meditacion-app.jpg"
+                    alt="meditacion-app"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-label">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-wraper">
                   <h2 class="portfolio-name-title">Meditation App</h2>
                   <p class="portfolio-desc">App</p>
@@ -142,13 +167,22 @@
             </li>
             <li class="portfolio-item link">
               <a class="link-picture link" href=""
-                ><img
-                  class="portfolio-picture"
-                  src="./images/portfolio/photo-taxi-service.jpg"
-                  alt="taxi-service"
-                  width="360"
-                  height="300"
-                />
+                ><div class="portfolio-box-label">
+                  <img
+                    class="portfolio-picture"
+                    src="./images/portfolio/photo-taxi-service.jpg"
+                    alt="taxi-service"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-label">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-wraper">
                   <h2 class="portfolio-name-title">Taxi Service</h2>
                   <p class="portfolio-desc">Marketing</p>
@@ -157,13 +191,22 @@
             </li>
             <li class="portfolio-item link">
               <a class="link-picture link" href=""
-                ><img
-                  class="portfolio-picture"
-                  src="./images/portfolio/photo-screen-illustrations.jpg"
-                  alt="screen-illustrations"
-                  width="360"
-                  height="300"
-                />
+                ><div class="portfolio-box-label">
+                  <img
+                    class="portfolio-picture"
+                    src="./images/portfolio/photo-screen-illustrations.jpg"
+                    alt="screen-illustrations"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-label">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-wraper">
                   <h2 class="portfolio-name-title">Screen Illustrations</h2>
                   <p class="portfolio-desc">Design</p>
@@ -172,13 +215,22 @@
             </li>
             <li class="portfolio-item link">
               <a class="link-picture link" href=""
-                ><img
-                  class="portfolio-picture"
-                  src="./images/portfolio/photo-online-courses.jpg"
-                  alt="online-courses"
-                  width="360"
-                  height="300"
-                />
+                ><div class="portfolio-box-label">
+                  <img
+                    class="portfolio-picture"
+                    src="./images/portfolio/photo-online-courses.jpg"
+                    alt="online-courses"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-label">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-wraper">
                   <h2 class="portfolio-name-title">Online Courses</h2>
                   <p class="portfolio-desc">Marketing</p>
@@ -187,13 +239,22 @@
             </li>
             <li class="portfolio-item link">
               <a class="link-picture link" href=""
-                ><img
-                  class="portfolio-picture"
-                  src="./images/portfolio/photo-instagram-stories-concept.jpg"
-                  alt="instagram-stories-concept"
-                  width="360"
-                  height="300"
-                />
+                ><div class="portfolio-box-label">
+                  <img
+                    class="portfolio-picture"
+                    src="./images/portfolio/photo-instagram-stories-concept.jpg"
+                    alt="instagram-stories-concept"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-label">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-wraper">
                   <h2 class="portfolio-name-title">
                     Instagram Stories Concept
@@ -204,13 +265,22 @@
             </li>
             <li class="portfolio-item link">
               <a class="link-picture link" href=""
-                ><img
-                  class="portfolio-picture"
-                  src="./images/portfolio/photo-oganic-food.jpg"
-                  alt="oganic-food"
-                  width="360"
-                  height="300"
-                />
+                ><div class="portfolio-box-label">
+                  <img
+                    class="portfolio-picture"
+                    src="./images/portfolio/photo-oganic-food.jpg"
+                    alt="oganic-food"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-label">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-wraper">
                   <h2 class="portfolio-name-title">Organic Food</h2>
                   <p class="portfolio-desc">Web Site</p>
@@ -219,13 +289,22 @@
             </li>
             <li class="portfolio-item link">
               <a class="link-picture link" href=""
-                ><img
-                  class="portfolio-picture"
-                  src="./images/portfolio/photo-fresh-coffee.jpg"
-                  alt="fresh-coffee"
-                  width="360"
-                  height="300"
-                />
+                ><div class="portfolio-box-label">
+                  <img
+                    class="portfolio-picture"
+                    src="./images/portfolio/photo-fresh-coffee.jpg"
+                    alt="fresh-coffee"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-label">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-wraper">
                   <h2 class="portfolio-name-title">Fresh Coffee</h2>
                   <p class="portfolio-desc">Web Site</p>
@@ -233,7 +312,6 @@
               >
             </li>
           </ul>
-          <!-- </div> -->
         </div>
       </section>
     </main>
