--- a/portfolio.html
+++ b/portfolio.html
@@ -19,46 +19,48 @@
   </head>
   <body class="body-portfolio-page">
     <!--HEADER-->
-    <header class="header">
-      <div class="header-container container">
-        <nav class="header-nav">
-          <a href="./index.html" class="header-logo link"
-            >Web<span class="dark-logo">Studio</span>
-          </a>
-          <ul class="header-nav-list list">
-            <li class="header-nav-item">
-              <a href="./index.html" class="header-nav-link link">Studio</a>
-            </li>
-            <li class="header-nav-item">
-              <a
-                href="./portfolio.html"
-                class="header-link-after header-nav-link current link"
-                >Portfolio</a
-              >
-            </li>
-            <li class="header-nav-item">
-              <a href="" class="header-nav-link link">Contacts</a>
-            </li>
-          </ul>
-        </nav>
-        <address class="header-address">
-          <ul class="header-address-list list">
-            <li>
-              <a
-                href="mailto:info@devstudio.com"
-                class="header-address-link link"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li>
-              <a href="tel:+110001111111" class="header-number-link link"
-                >+11 (000) 111-11-11</a
-              >
-            </li>
-          </ul>
-        </address>
-      </div>
-    </header>
+    <div class="header-fixed-box">
+      <header class="header">
+        <div class="header-container container">
+          <nav class="header-nav">
+            <a href="./index.html" class="header-logo link"
+              >Web<span class="dark-logo">Studio</span>
+            </a>
+            <ul class="header-nav-list list">
+              <li class="header-nav-item">
+                <a href="./index.html" class="header-nav-link link">Studio</a>
+              </li>
+              <li class="header-nav-item">
+                <a
+                  href="./portfolio.html"
+                  class="header-link-after header-nav-link current link"
+                  >Portfolio</a
+                >
+              </li>
+              <li class="header-nav-item">
+                <a href="" class="header-nav-link link">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+          <address class="header-address">
+            <ul class="header-address-list list">
+              <li>
+                <a
+                  href="mailto:info@devstudio.com"
+                  class="header-address-link link"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a href="tel:+110001111111" class="header-number-link link"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+      </header>
+    </div>
 
     <!-- Унікальна інформація на сторінці -->
     <main>
