--- a/index.html
+++ b/index.html
@@ -19,46 +19,48 @@
   </head>
   <body>
     <!--HEADER-->
-    <header class="header">
-      <div class="header-container container">
-        <nav class="header-nav">
-          <a href="./index.html" class="header-logo link"
-            >Web<span class="dark-logo">Studio</span>
-          </a>
-          <ul class="header-nav-list list">
-            <li class="header-nav-item">
-              <a href="./index.html" class="header-nav-link current link"
-                >Studio</a
-              >
-            </li>
-            <li class="header-nav-item">
-              <a href="./portfolio.html" class="header-nav-link link"
-                >Portfolio</a
-              >
-            </li>
-            <li class="header-nav-item">
-              <a href="" class="header-nav-link link">Contacts</a>
-            </li>
-          </ul>
-        </nav>
-        <address class="header-address">
-          <ul class="header-address-list list">
-            <li>
-              <a
-                href="mailto:info@devstudio.com"
-                class="header-address-link link"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li>
-              <a href="tel:+110001111111" class="header-number-link link"
-                >+11 (000) 111-11-11</a
-              >
-            </li>
-          </ul>
-        </address>
-      </div>
-    </header>
+    <div class="header-fixed-box">
+      <header class="header">
+        <div class="header-container container">
+          <nav class="header-nav">
+            <a href="./index.html" class="header-logo link"
+              >Web<span class="dark-logo">Studio</span>
+            </a>
+            <ul class="header-nav-list list">
+              <li class="header-nav-item">
+                <a href="./index.html" class="header-nav-link current link"
+                  >Studio</a
+                >
+              </li>
+              <li class="header-nav-item">
+                <a href="./portfolio.html" class="header-nav-link link"
+                  >Portfolio</a
+                >
+              </li>
+              <li class="header-nav-item">
+                <a href="" class="header-nav-link link">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+          <address class="header-address">
+            <ul class="header-address-list list">
+              <li>
+                <a
+                  href="mailto:info@devstudio.com"
+                  class="header-address-link link"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a href="tel:+110001111111" class="header-number-link link"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+      </header>
+    </div>
 
     <!--Унікальна інформація на сторінці-->
     <main>
@@ -601,9 +603,9 @@
     </footer>
 
     <!-- Modal window -->
-    <div class="backdrop" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button class="madal-btn-exit" type="button" data-modal-close>
+        <button class="modal-btn-exit" type="button" data-modal-close>
           <svg class="modal-icon-exit" width="8" height="8">
             <use href="./images/icon.svg#icon-closed-modal"></use>
           </svg>
